refactor: 批量使用 getFirst() 并精简代码（P3C 规约修正）