@@ -220,7 +220,7 @@ public class BaiduImageClient implements ImageClient {
         if (CollectionUtils.isEmpty(data)) {
             throw new RuntimeException("文心一格返回的图片数据为空");
         }
-        String imageUrl = (String) data.get(0).get("url");
+        String imageUrl = (String) data.getFirst().get("url");
         if (imageUrl == null || imageUrl.isBlank()) {
             throw new RuntimeException("文心一格返回的图片 URL 为空");
         }
