@@ -248,7 +248,7 @@ public BufferedImage generate(String prompt) {
         if (CollectionUtils.isEmpty(data)) {
             throw new RuntimeException("ZAI 返回的图片数据为空");
         }
-        String imageUrl = (String) data.get(0).get("url");
+        String imageUrl = (String) data.getFirst().get("url");
         if (imageUrl == null || imageUrl.isBlank()) {
             throw new RuntimeException("ZAI 返回的图片 URL 为空");
         }
