@@ -48,7 +48,7 @@ public class LatencyRouterStrategy implements RouterStrategy {
         if (clients.isEmpty()) {
             throw new IllegalArgumentException("No clients available");
         }
-        return clients.get(0);
+        return clients.getFirst();
     }
 
     /**
