@@ -47,7 +47,7 @@ public class LatencyStrategy implements RouterStrategy {
         if (clients.isEmpty()) {
             throw new IllegalArgumentException("No clients available");
         }
-        return clients.get(0);
+        return clients.getFirst();
     }
 
     /**
