@@ -252,7 +252,7 @@ public class TarFileSystem implements FileSystem {
             MergedInputStream(List<File> files) throws FileNotFoundException {
                 this.files = files;
                 if (!files.isEmpty()) {
-                    this.currentStream = new FileInputStream(files.get(0));
+                    this.currentStream = new FileInputStream(files.getFirst());
                 }
             }
 
