@@ -151,7 +151,7 @@ public class VggAgeRecognitionTranslator implements Translator<Image, PredictRes
             }
 
             //                   
-            NDArray output = list.get(0);
+            NDArray output = list.getFirst();
             if (LOGGER.isDebugEnabled()) {
                 LOGGER.debug("                        : {}", output.getShape());
             }
@@ -161,7 +161,7 @@ public class VggAgeRecognitionTranslator implements Translator<Image, PredictRes
 
             //           2D        [1, 101]               
             if (output.getShape().dimension() == 2) {
-                NDArray firstRow = output.get(0);
+                NDArray firstRow = output.get(0); // [P3C 3.7 豁免] NDArray 张量下标访问
                 probs = firstRow.toFloatArray();
             }
             //           1D        [101]               
